<resources>
    <string name="app_name">railway_reservation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="onboarding1_title">Welcome Traveler !</string>
    <string name="onboarding1_text">Hello There Welcome! It’s Great Choice To Travel Via Train...  </string>
    <string name="button_next">Next</string>
    <string name="onboarding2_title">Plan Your Trip...</string>
    <string name="onboarding2_text">Select Your Destination And \n Start Your Journey...</string>
    <string name="button_back">Back</string>
    <string name="onboarding3_title">Enjoy Your Journey</string>
    <string name="onboarding3_text">Enjoy Your  Journey In Train With \n Full Of Happiness...</string>
    <string name="login">Login</string>
    <string-array name="counrtycode">
        <item>+61</item>
        //Australia
        <item>+880</item>
        //Bangladesh
        <item>+91</item>
        //India
        <item>+7</item>
        //Russia
        <item>+44</item>//United Kingdom
        <item>+1</item>
        //United States
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string-array name="Class">
        <item>Any Class</item>
        <item>AC 2 Tier</item>
        <item>AC 3 Tier</item>
        <item>Sleeper</item>
        <item>Second Sitting</item>
    </string-array>
    <string-array name="BerthPreference">
        <item>Upper Berth</item>
        <item>Middle Berth</item>
        <item>Lower Berth</item>
        <item>Side Lower</item>
        <item>Side Upper</item>

    </string-array>
    <string-array name="Stations">
        <item>Ahmedabad Jn</item>
        <item>Jalore</item>
        <item>Mumbai</item>
        <item>Pali</item>
        <item>Delhi</item>
        <item>Pokhran</item>
        <item>Surat</item>
        <item>Jaisalmer</item>
        <item>Jaipur</item>
        <item>Barmer</item>
        <item>Jodhpur Jn</item>
        <item>Mount Abu</item>
        <item>Nagaur</item>
        <item>Ujjain</item>
        <item>Rajkot</item>
        <item>Aurangabad</item>
        <item>Gandhinagar</item>
        <item>Nanded</item>
        <item>Udhana Jn</item>
        <item>Lalitpur</item>
        <item>Jansi</item>
        <item>Gwalior</item>
        <item>Bikaner Jn</item>
        <item>Visakhapatnam</item>
        <item>Secunderabad Jn</item>
        <item>Sambalpur</item>
        <item>Shahganj jn</item>
        <item>Vijayawada</item>
        <item>Surapur</item>
        <item>Solapur Jn</item>
        <item>Sardiha</item>
        <item>Sarju</item>
        <item>Varanasi</item>
        <item>Prayagraj Jn</item>
        <item>Nashik</item>
        <item>Indore</item>
        <item>Amravati</item>
        <item>Kota</item>
        <item>Jamnagar</item>
        <item>Bhuj</item>
        <item>Porbandar Jn</item>
        <item>Junagadh</item>
        <item>Palanpur</item>
        <item>Bhavnagar</item>


    </string-array>
    <string-array name="quota">
        <item>General</item>
        <item>Ladies</item>
        <item>Tatkal</item>
        <item>Sr. Citizen</item>
        <item>Premium Tatkal</item>
        <item>Person with Disability</item>
    </string-array>
    <string-array name="state">
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="AndhraPradesh">
        <item>Adoni</item>
        <item>Amaravati</item>
        <item>Anantapur</item>
        <item>Chandragiri</item>
        <item>Chittoor</item>
        <item>Dowlaiswaram</item>
        <item>Eluru</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Kakinada</item>
        <item>Kurnool</item>
        <item>Machilipatnam</item>
        <item>Nagarjunakoṇḍa</item>
        <item>Rajahmundry</item>
        <item>Srikakulam</item>
        <item>Tirupati</item>
        <item>Vijayawada</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>Yemmiganur</item>
    </string-array>
    <string-array name="ArunachalPradesh">
        <item>Itanagar</item>
    </string-array>
    <string-array name="Assam">
        <item>Dhuburi</item>
        <item>Dibrugarh</item>
        <item>Dispur</item>
        <item>Guwahati</item>
        <item>Jorhat</item>
        <item>Nagaon</item>
        <item>Sivasagar</item>
        <item>Silchar</item>
        <item>Tezpur</item>
        <item>Tinsukia</item>
    </string-array>
    <string-array name="Bihar">
        <item>Ara</item>
        <item>Barauni</item>
        <item>Begusarai</item>
        <item>Bettiah</item>
        <item>Bhagalpur</item>
        <item>Bihar Sharif</item>
        <item>Bodh Gaya</item>
        <item>Buxar</item>
        <item>Chapra</item>
        <item>Darbhanga</item>
        <item>Dehri</item>
        <item>Dinapur Nizamat</item>
        <item>Gaya</item>
        <item>Hajipur</item>
        <item>Jamalpur</item>
        <item>Katihar</item>
        <item>Madhubani</item>
        <item>Motihari</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Pusa</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Sasaram</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
    </string-array>
    <string-array name="Chhattisgarh">
        <item>Ambikapur</item>
        <item>Bhilai</item>
        <item>Bilaspur</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Jagdalpur</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
    </string-array>
    <string-array name="Goa">
        <item>Madgaon</item>
        <item>Panaji</item>
    </string-array>
    <string-array name="Gujarat">
        <item>Ahmadabad</item>
        <item>Amreli</item>
        <item>Bharuch</item>
        <item>Bhavnagar</item>
        <item>Bhuj</item>
        <item>Dwarka</item>
        <item>Gandhinagar</item>
        <item>Godhra</item>
        <item>Jamnagar</item>
        <item>Junagadh</item>
        <item>Kandla</item>
        <item>Khambhat</item>
        <item>Kheda</item>
        <item>Mahesana</item>
        <item>Morbi</item>
        <item>Nadiad</item>
        <item>Navsari</item>
        <item>Okha</item>
        <item>Palanpur</item>
        <item>Patan</item>
        <item>Porbandar</item>
        <item>Rajkot</item>
        <item>Surat</item>
        <item>Surendranagar</item>
        <item>Valsad</item>
        <item>Veraval</item>
    </string-array>
    <string-array name="Haryana">
        <item>Ambala</item>
        <item>Bhiwani</item>
        <item>Chandigarh</item>
        <item>Faridabad</item>
        <item>Firozpur Jhirka</item>
        <item>Gurugram</item>
        <item>Hansi</item>
        <item>Hisar</item>
        <item>Jind</item>
        <item>Kaithal</item>
        <item>Karnal</item>
        <item>Kurukshetra</item>
        <item>Panipat</item>
        <item>Pehowa</item>
        <item>Rewari</item>
        <item>Rohtak</item>
        <item>Sirsa</item>
        <item>Sonipat</item>
    </string-array>
    <string-array name="HimachalPradesh">
        <item>Bilaspur</item>
        <item>Chamba</item>
        <item>Dalhousie</item>
        <item>Dharmshala</item>
        <item>Hamirpur</item>
        <item>Kangra</item>
        <item>Kullu</item>
        <item>Mandi</item>
        <item>Nahan</item>
        <item>Shimla</item>
        <item>Una</item>
    </string-array>
    <string-array name="Jharkhand">
        <item>Bokaro</item>
        <item>Chaibasa</item>
        <item>Deoghar</item>
        <item>Dhanbad</item>
        <item>Dumka</item>
        <item>Giridih</item>
        <item>Hazaribag</item>
        <item>Jamshedpur</item>
        <item>Jharia</item>
        <item>Rajmahal</item>
        <item>Ranchi</item>
        <item>Saraikela</item>
    </string-array>
    <string-array name="Karnataka">
        <item>Badami</item>
        <item>Ballari</item>
        <item>Bengaluru</item>
        <item>Belagavi</item>
        <item>Bhadravati</item>
        <item>Bidar</item>
        <item>Chikkamagaluru</item>
        <item>Chitradurga</item>
        <item>Davangere</item>
        <item>Halebid</item>
        <item>Hassan</item>
        <item>Hubballi-Dharwad</item>
        <item>Kalaburagi</item>
        <item>Kolar</item>
        <item>Madikeri</item>
        <item>Mandya</item>
        <item>Mangaluru</item>
        <item>Mysuru</item>
        <item>Raichur</item>
        <item>Shivamogga</item>
        <item>Shravanabelagola</item>
        <item>Shrirangapattana</item>
        <item>Tumakuru</item>
        <item>Vijayapura</item>
    </string-array>
    <string-array name="Kerala">
        <item>Alappuzha</item>
        <item>Vatakara</item>
        <item>Idukki</item>
        <item>Kannur</item>
        <item>Kochi</item>
        <item>Kollam</item>
        <item>Kottayam</item>
        <item>Kozhikode</item>
        <item>Mattancheri</item>
        <item>Palakkad</item>
        <item>Thalassery</item>
        <item>Thiruvananthapuram</item>
        <item>Thrissur</item>
    </string-array>
    <string name="arpitrole">Role:-Front End Devloper</string>
    <string name="arpitabout"> Arpit Bharatbhai Kakadiya is the front end devloper of the railway reservation Application,Who is currently study in Sutex Bank College Amroli.He is also the project Manager.</string>
    <string name="ajayrole">Role:-Back End Devloper</string>
    <string name="ajayabout"> Mali Ajay Ganpat Ram is the back end devloper of the railway reservation Application,Who is currently study in Sutex Bank College Amroli.</string>
    <string name="krishrole">Role:-Test Engineer</string>
    <string name="krishabout"> Krish Ashokbhai radadiya is the Test Engineer of the railway reservation Application,Who is currently study in Sutex Bank College Amroli.</string>
    <string name="umeshrole">Role:-System Architect</string>
    <string name="umeshabout"> Mishra UmeshChandra SureshChandra is the System Architect of the railway reservation Application,Who is currently study in Sutex Bank College Amroli.</string>
</resources>