<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homescreen_navigationdrawer_aboutus"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <com.google.android.material.transformation.TransformationChildCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/arpit_aboutus"
                    android:layout_marginTop="10dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/charmonman"
                    android:textSize="25sp"
                    android:text="Arpit Kakadiya"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/arpitrole"
                    android:fontFamily="@font/almendra"
                    android:layout_marginTop="5dp"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/arpitabout"
                    android:fontFamily="@font/almendra"
                    android:textSize="22sp"
                    android:layout_marginBottom="10dp">

                </TextView>

            </LinearLayout>



        </com.google.android.material.transformation.TransformationChildCard>

        <com.google.android.material.transformation.TransformationChildCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ajay_aboutus"
                    android:layout_marginTop="10dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/charmonman"
                    android:textSize="25sp"
                    android:text="Ajay Mali"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ajayrole"
                    android:fontFamily="@font/almendra"
                    android:layout_marginTop="5dp"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/ajayabout"
                    android:fontFamily="@font/almendra"
                    android:textSize="22sp"
                    android:layout_marginBottom="10dp">

                </TextView>

            </LinearLayout>



        </com.google.android.material.transformation.TransformationChildCard>

        <com.google.android.material.transformation.TransformationChildCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/krish_aboutus"
                    android:layout_marginTop="10dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/charmonman"
                    android:textSize="25sp"
                    android:text="Krish Radadiya"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/krishrole"
                    android:fontFamily="@font/almendra"
                    android:layout_marginTop="5dp"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/krishabout"
                    android:fontFamily="@font/almendra"
                    android:textSize="22sp"
                    android:layout_marginBottom="10dp">

                </TextView>

            </LinearLayout>



        </com.google.android.material.transformation.TransformationChildCard>

        <com.google.android.material.transformation.TransformationChildCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/umesh_aboutus"
                    android:layout_marginTop="10dp">

                </de.hdodenhof.circleimageview.CircleImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/charmonman"
                    android:textSize="25sp"
                    android:text="Umesh Mishra"
                    android:textStyle="bold">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/umeshrole"
                    android:fontFamily="@font/almendra"
                    android:layout_marginTop="5dp"
                    android:textSize="25sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/umeshabout"
                    android:fontFamily="@font/almendra"
                    android:textSize="22sp"
                    android:layout_marginBottom="10dp">

                </TextView>

            </LinearLayout>



        </com.google.android.material.transformation.TransformationChildCard>
    </LinearLayout>

</ScrollView>